--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "private": "true",
   "license": "",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts"
+    "dev": "ts-node-dev src/server.ts",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.2",
+    "typeorm": "^0.2.41",
     "typescript": "^4.5.4"
   },
   "devDependencies": {
