--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "author": "TImoteoVieira <timoteo7charles777@gmail.com>",
   "private": "true",
-  "license": "",
+  "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/uuid": "^8.3.4",
     "ts-node-dev": "^1.1.8"
   }
 }
